[project]
name = "langgraph-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain",
    "ipython",
    "langchain-openai",
    "langchain-community",
    "python-dotenv",
    "chromadb",
    "langchain-chroma",
]
